parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COLON
    DOUBLEQUOTE

Grammar

Rule 0     S' -> program
Rule 1     program -> declaration statement
Rule 2     program -> statement
Rule 3     declaration -> INT ID SEMICOLON
Rule 4     statement -> FOR LPAREN ID ASSIGN NUMBER SEMICOLON ID LTE NUMBER SEMICOLON ID PLUS PLUS RPAREN LBRACE SYSTEM DOT OUT DOT PRINTLN LPAREN ID RPAREN SEMICOLON RBRACE
Rule 5     statement -> SYSTEM DOT OUT DOT PRINTLN LPAREN ID RPAREN SEMICOLON

Terminals, with rules where they appear

ASSIGN               : 4
COLON                : 
DOT                  : 4 4 5 5
DOUBLEQUOTE          : 
FOR                  : 4
ID                   : 3 4 4 4 4 5
INT                  : 3
LBRACE               : 4
LPAREN               : 4 4 5
LTE                  : 4
NUMBER               : 4 4
OUT                  : 4 5
PLUS                 : 4 4
PRINTLN              : 4 5
RBRACE               : 4
RPAREN               : 4 4 5
SEMICOLON            : 3 4 4 4 5
SYSTEM               : 4 5
error                : 

Nonterminals, with rules where they appear

declaration          : 1
program              : 0
statement            : 1 2

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . declaration statement
    (2) program -> . statement
    (3) declaration -> . INT ID SEMICOLON
    (4) statement -> . FOR LPAREN ID ASSIGN NUMBER SEMICOLON ID LTE NUMBER SEMICOLON ID PLUS PLUS RPAREN LBRACE SYSTEM DOT OUT DOT PRINTLN LPAREN ID RPAREN SEMICOLON RBRACE
    (5) statement -> . SYSTEM DOT OUT DOT PRINTLN LPAREN ID RPAREN SEMICOLON

    INT             shift and go to state 4
    FOR             shift and go to state 5
    SYSTEM          shift and go to state 6

    program                        shift and go to state 1
    declaration                    shift and go to state 2
    statement                      shift and go to state 3

state 1

    (0) S' -> program .



state 2

    (1) program -> declaration . statement
    (4) statement -> . FOR LPAREN ID ASSIGN NUMBER SEMICOLON ID LTE NUMBER SEMICOLON ID PLUS PLUS RPAREN LBRACE SYSTEM DOT OUT DOT PRINTLN LPAREN ID RPAREN SEMICOLON RBRACE
    (5) statement -> . SYSTEM DOT OUT DOT PRINTLN LPAREN ID RPAREN SEMICOLON

    FOR             shift and go to state 5
    SYSTEM          shift and go to state 6

    statement                      shift and go to state 7

state 3

    (2) program -> statement .

    $end            reduce using rule 2 (program -> statement .)


state 4

    (3) declaration -> INT . ID SEMICOLON

    ID              shift and go to state 8


state 5

    (4) statement -> FOR . LPAREN ID ASSIGN NUMBER SEMICOLON ID LTE NUMBER SEMICOLON ID PLUS PLUS RPAREN LBRACE SYSTEM DOT OUT DOT PRINTLN LPAREN ID RPAREN SEMICOLON RBRACE

    LPAREN          shift and go to state 9


state 6

    (5) statement -> SYSTEM . DOT OUT DOT PRINTLN LPAREN ID RPAREN SEMICOLON

    DOT             shift and go to state 10


state 7

    (1) program -> declaration statement .

    $end            reduce using rule 1 (program -> declaration statement .)


state 8

    (3) declaration -> INT ID . SEMICOLON

    SEMICOLON       shift and go to state 11


state 9

    (4) statement -> FOR LPAREN . ID ASSIGN NUMBER SEMICOLON ID LTE NUMBER SEMICOLON ID PLUS PLUS RPAREN LBRACE SYSTEM DOT OUT DOT PRINTLN LPAREN ID RPAREN SEMICOLON RBRACE

    ID              shift and go to state 12


state 10

    (5) statement -> SYSTEM DOT . OUT DOT PRINTLN LPAREN ID RPAREN SEMICOLON

    OUT             shift and go to state 13


state 11

    (3) declaration -> INT ID SEMICOLON .

    FOR             reduce using rule 3 (declaration -> INT ID SEMICOLON .)
    SYSTEM          reduce using rule 3 (declaration -> INT ID SEMICOLON .)


state 12

    (4) statement -> FOR LPAREN ID . ASSIGN NUMBER SEMICOLON ID LTE NUMBER SEMICOLON ID PLUS PLUS RPAREN LBRACE SYSTEM DOT OUT DOT PRINTLN LPAREN ID RPAREN SEMICOLON RBRACE

    ASSIGN          shift and go to state 14


state 13

    (5) statement -> SYSTEM DOT OUT . DOT PRINTLN LPAREN ID RPAREN SEMICOLON

    DOT             shift and go to state 15


state 14

    (4) statement -> FOR LPAREN ID ASSIGN . NUMBER SEMICOLON ID LTE NUMBER SEMICOLON ID PLUS PLUS RPAREN LBRACE SYSTEM DOT OUT DOT PRINTLN LPAREN ID RPAREN SEMICOLON RBRACE

    NUMBER          shift and go to state 16


state 15

    (5) statement -> SYSTEM DOT OUT DOT . PRINTLN LPAREN ID RPAREN SEMICOLON

    PRINTLN         shift and go to state 17


state 16

    (4) statement -> FOR LPAREN ID ASSIGN NUMBER . SEMICOLON ID LTE NUMBER SEMICOLON ID PLUS PLUS RPAREN LBRACE SYSTEM DOT OUT DOT PRINTLN LPAREN ID RPAREN SEMICOLON RBRACE

    SEMICOLON       shift and go to state 18


state 17

    (5) statement -> SYSTEM DOT OUT DOT PRINTLN . LPAREN ID RPAREN SEMICOLON

    LPAREN          shift and go to state 19


state 18

    (4) statement -> FOR LPAREN ID ASSIGN NUMBER SEMICOLON . ID LTE NUMBER SEMICOLON ID PLUS PLUS RPAREN LBRACE SYSTEM DOT OUT DOT PRINTLN LPAREN ID RPAREN SEMICOLON RBRACE

    ID              shift and go to state 20


state 19

    (5) statement -> SYSTEM DOT OUT DOT PRINTLN LPAREN . ID RPAREN SEMICOLON

    ID              shift and go to state 21


state 20

    (4) statement -> FOR LPAREN ID ASSIGN NUMBER SEMICOLON ID . LTE NUMBER SEMICOLON ID PLUS PLUS RPAREN LBRACE SYSTEM DOT OUT DOT PRINTLN LPAREN ID RPAREN SEMICOLON RBRACE

    LTE             shift and go to state 22


state 21

    (5) statement -> SYSTEM DOT OUT DOT PRINTLN LPAREN ID . RPAREN SEMICOLON

    RPAREN          shift and go to state 23


state 22

    (4) statement -> FOR LPAREN ID ASSIGN NUMBER SEMICOLON ID LTE . NUMBER SEMICOLON ID PLUS PLUS RPAREN LBRACE SYSTEM DOT OUT DOT PRINTLN LPAREN ID RPAREN SEMICOLON RBRACE

    NUMBER          shift and go to state 24


state 23

    (5) statement -> SYSTEM DOT OUT DOT PRINTLN LPAREN ID RPAREN . SEMICOLON

    SEMICOLON       shift and go to state 25


state 24

    (4) statement -> FOR LPAREN ID ASSIGN NUMBER SEMICOLON ID LTE NUMBER . SEMICOLON ID PLUS PLUS RPAREN LBRACE SYSTEM DOT OUT DOT PRINTLN LPAREN ID RPAREN SEMICOLON RBRACE

    SEMICOLON       shift and go to state 26


state 25

    (5) statement -> SYSTEM DOT OUT DOT PRINTLN LPAREN ID RPAREN SEMICOLON .

    $end            reduce using rule 5 (statement -> SYSTEM DOT OUT DOT PRINTLN LPAREN ID RPAREN SEMICOLON .)


state 26

    (4) statement -> FOR LPAREN ID ASSIGN NUMBER SEMICOLON ID LTE NUMBER SEMICOLON . ID PLUS PLUS RPAREN LBRACE SYSTEM DOT OUT DOT PRINTLN LPAREN ID RPAREN SEMICOLON RBRACE

    ID              shift and go to state 27


state 27

    (4) statement -> FOR LPAREN ID ASSIGN NUMBER SEMICOLON ID LTE NUMBER SEMICOLON ID . PLUS PLUS RPAREN LBRACE SYSTEM DOT OUT DOT PRINTLN LPAREN ID RPAREN SEMICOLON RBRACE

    PLUS            shift and go to state 28


state 28

    (4) statement -> FOR LPAREN ID ASSIGN NUMBER SEMICOLON ID LTE NUMBER SEMICOLON ID PLUS . PLUS RPAREN LBRACE SYSTEM DOT OUT DOT PRINTLN LPAREN ID RPAREN SEMICOLON RBRACE

    PLUS            shift and go to state 29


state 29

    (4) statement -> FOR LPAREN ID ASSIGN NUMBER SEMICOLON ID LTE NUMBER SEMICOLON ID PLUS PLUS . RPAREN LBRACE SYSTEM DOT OUT DOT PRINTLN LPAREN ID RPAREN SEMICOLON RBRACE

    RPAREN          shift and go to state 30


state 30

    (4) statement -> FOR LPAREN ID ASSIGN NUMBER SEMICOLON ID LTE NUMBER SEMICOLON ID PLUS PLUS RPAREN . LBRACE SYSTEM DOT OUT DOT PRINTLN LPAREN ID RPAREN SEMICOLON RBRACE

    LBRACE          shift and go to state 31


state 31

    (4) statement -> FOR LPAREN ID ASSIGN NUMBER SEMICOLON ID LTE NUMBER SEMICOLON ID PLUS PLUS RPAREN LBRACE . SYSTEM DOT OUT DOT PRINTLN LPAREN ID RPAREN SEMICOLON RBRACE

    SYSTEM          shift and go to state 32


state 32

    (4) statement -> FOR LPAREN ID ASSIGN NUMBER SEMICOLON ID LTE NUMBER SEMICOLON ID PLUS PLUS RPAREN LBRACE SYSTEM . DOT OUT DOT PRINTLN LPAREN ID RPAREN SEMICOLON RBRACE

    DOT             shift and go to state 33


state 33

    (4) statement -> FOR LPAREN ID ASSIGN NUMBER SEMICOLON ID LTE NUMBER SEMICOLON ID PLUS PLUS RPAREN LBRACE SYSTEM DOT . OUT DOT PRINTLN LPAREN ID RPAREN SEMICOLON RBRACE

    OUT             shift and go to state 34


state 34

    (4) statement -> FOR LPAREN ID ASSIGN NUMBER SEMICOLON ID LTE NUMBER SEMICOLON ID PLUS PLUS RPAREN LBRACE SYSTEM DOT OUT . DOT PRINTLN LPAREN ID RPAREN SEMICOLON RBRACE

    DOT             shift and go to state 35


state 35

    (4) statement -> FOR LPAREN ID ASSIGN NUMBER SEMICOLON ID LTE NUMBER SEMICOLON ID PLUS PLUS RPAREN LBRACE SYSTEM DOT OUT DOT . PRINTLN LPAREN ID RPAREN SEMICOLON RBRACE

    PRINTLN         shift and go to state 36


state 36

    (4) statement -> FOR LPAREN ID ASSIGN NUMBER SEMICOLON ID LTE NUMBER SEMICOLON ID PLUS PLUS RPAREN LBRACE SYSTEM DOT OUT DOT PRINTLN . LPAREN ID RPAREN SEMICOLON RBRACE

    LPAREN          shift and go to state 37


state 37

    (4) statement -> FOR LPAREN ID ASSIGN NUMBER SEMICOLON ID LTE NUMBER SEMICOLON ID PLUS PLUS RPAREN LBRACE SYSTEM DOT OUT DOT PRINTLN LPAREN . ID RPAREN SEMICOLON RBRACE

    ID              shift and go to state 38


state 38

    (4) statement -> FOR LPAREN ID ASSIGN NUMBER SEMICOLON ID LTE NUMBER SEMICOLON ID PLUS PLUS RPAREN LBRACE SYSTEM DOT OUT DOT PRINTLN LPAREN ID . RPAREN SEMICOLON RBRACE

    RPAREN          shift and go to state 39


state 39

    (4) statement -> FOR LPAREN ID ASSIGN NUMBER SEMICOLON ID LTE NUMBER SEMICOLON ID PLUS PLUS RPAREN LBRACE SYSTEM DOT OUT DOT PRINTLN LPAREN ID RPAREN . SEMICOLON RBRACE

    SEMICOLON       shift and go to state 40


state 40

    (4) statement -> FOR LPAREN ID ASSIGN NUMBER SEMICOLON ID LTE NUMBER SEMICOLON ID PLUS PLUS RPAREN LBRACE SYSTEM DOT OUT DOT PRINTLN LPAREN ID RPAREN SEMICOLON . RBRACE

    RBRACE          shift and go to state 41


state 41

    (4) statement -> FOR LPAREN ID ASSIGN NUMBER SEMICOLON ID LTE NUMBER SEMICOLON ID PLUS PLUS RPAREN LBRACE SYSTEM DOT OUT DOT PRINTLN LPAREN ID RPAREN SEMICOLON RBRACE .

    $end            reduce using rule 4 (statement -> FOR LPAREN ID ASSIGN NUMBER SEMICOLON ID LTE NUMBER SEMICOLON ID PLUS PLUS RPAREN LBRACE SYSTEM DOT OUT DOT PRINTLN LPAREN ID RPAREN SEMICOLON RBRACE .)

